trunk/Archive2/c4/4c84564e7d04f3/output
main.cpp: In member function 'void S::f()':
main.cpp:5:18: error: expected identifier before 'nullptr'
     auto l = [=, nullptr]{ x = 42; }; //this is implicitly captured here
                  ^
main.cpp:6:18: error: expected identifier before 'true'
     auto m = [=, true]{ x = 42; }; //this is implicitly captured here
                  ^
