trunk/Archive2/c4/4c84564e7d04f3/main.cpp
struct S
{
  int x;
  void f() {
    auto l = [=, nullptr]{ x = 42; }; //this is implicitly captured here
    auto m = [=, true]{ x = 42; }; //this is implicitly captured here
  }
};
